2006-07-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* doc/vmintegration.texinfo:
	Mention callback methods.
	* gnu/java/lang/management/MemoryMXBeanImpl.java:
	(fireNotification(String,String,long,long,long,long,long)):
	Made package-private.
	(fireThresholdExceededNotification(String,long,long,long,
	long,long)): Likewise.
	(fireCollectionThresholdExceededNotification(String,long,
	long,long,long,long)): Likewise.
	* java/lang/management/MemoryMXBean.java:
	Document notifications.

2006-07-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/lang/management/MemoryMXBeanImpl.java:
	(fireNotification(String,String,long,long,long,long,long)):
	Implemented.
	(fireThresholdExceededNotification(String,long,long,long,
	long,long)): Likewise.
	(fireCollectionThresholdExceededNotification(String,long,
	long,long,long,long)): Likewise.
	* java/lang/management/MemoryNotificationInfo.java:
	Use composite type from MemoryMXBeanImpl.
	* javax/management/openmbean/CompositeData.java:
	Correct documentation.
	* javax/management/openmbean/CompositeDataSupport.java,
	* javax/management/openmbean/InvalidKeyException.java:
	New files.

2006-07-22  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/java/security/util/IntegerUtil.java: New file.

2006-07-22  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR Classpath/28100
	* gnu/javax/crypto/cipher/TripleDES.java: Updated documentation.
	(KEY_SIZE): Likewise.
	(adjustParity(int,byte[],int): New method.
	(adjustParity(byte[],int): Call above method with 3 as 1st argument.
	(isParityAdjusted(int,byte[],int)): New method.
	(isParityAdjusted): Call above method with 3 as 1st argument.
	(keySizes): Add 8 and 16 as other valid key sizes.
	(makeKey): Amended to cater for 1, 2 and 3 independent DES keys.

2006-07-22  Andreas Tobler  <a.tobler@schweiz.ch>

	* gnu/java/awt/peer/gtk/CairoSurface.java (CairoSurface): Rearrange
	code for the pixel swap routine to be more efficient.

2006-07-20  Lillian Angel  <langel@redhat.com>
