@@ -1,3 +1,8 @@
+2006-07-22  Robert Schuster  <robertschuster@fsfe.org>
+
+	* javax/swing/plaf/metal/MetalLookAndFeel:
+	(initComponentDefaults): Added new properties, added comments.
+
 2006-07-22  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* doc/vmintegration.texinfo:
